--- a/src/app/feature/components/layout-admin/layout-admin.component.html
+++ b/src/app/feature/components/layout-admin/layout-admin.component.html
@@ -1,1 +1,15 @@
-<p>layout-admin works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ambiefac school</title>
+</head>
+<body>
+  <nav class="w-full ">
+    <app-sidenav-admin (enviarTitulo)="recibirTitulo($event)">
+        <ng-content ></ng-content>
+    </app-sidenav-admin>
+  </nav>
+</body>
+</html>
