--- a/src/app/feature/home/cursos/cursos.component.scss
+++ b/src/app/feature/home/cursos/cursos.component.scss
@@ -85,10 +85,9 @@ body {
         box-shadow: -5px -9px 15px -3px rgba(0, 0, 0, 0.1), 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
         .cursos-image {
-            width: 150px;
+            width: 148px;
             height: auto;
-            margin-bottom: 10px;
-            margin: 0 10%;
+            margin: 0px 24px 0px 0px;
         }
 
         .cursos-info {
