--- a/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
+++ b/src/app/feature/academy/client/components/mi-aprendizaje/mi-aprendizaje.component.html
@@ -34,7 +34,7 @@ fondo2 flex flex-col items-center justify-center text-white">
       </div>
       <div class=" mx-2 w-80">
         <h2 class="m-0">¡Hola!</h2>
-        <h2 class="m-0">Esteban Alfonso</h2>
+        <h2 class="m-0">{{response.data.fullName}}</h2>
       </div>
     </div>
     <div class="flex flex-row items-center ">
@@ -52,16 +52,12 @@ fondo2 flex flex-col items-center justify-center text-white">
 
 </section>
 <section class="w-full flex flex-col lg:flex-row justify-center  gap-2 my-4 h-screm">
-  <section class="w-full lg:w-[60%] border flex flex-col gap-4">
+  <section class="w-full lg:w-[60%] border flex flex-col gap-4" *ngIf="response.success">
     <div class="container mx-auto p-4  scrollContent">
       <app-tabs-client [tabs]="tabs" (tabSelected)="onTabSelected($event)">
-        <div *ngIf="selectedTab === 'perfil'"><app-perfil></app-perfil></div>
+        <div *ngIf="selectedTab === 'perfil'"><app-perfil [data]="response.data"></app-perfil></div>
         <div *ngIf="selectedTab === 'cursos'"><app-client-cursos></app-client-cursos></div>
       </app-tabs-client>
     </div>
   </section>
-  <!-- <section class="w-[30%]  border">
-    hola
-
-  </section> -->
 </section>
