--- a/src/app/feature/admin/manag-exams/components/consultar-examen/consultar-examen.component.html
+++ b/src/app/feature/admin/manag-exams/components/consultar-examen/consultar-examen.component.html
@@ -12,7 +12,8 @@
     <div class="w-[100%] mx-[14px] " style="max-height: 427px; overflow-y: auto; ">
       <div class="w-full p-4 flex flex-col  items-center bg-white rounded mt-2" style="border-bottom: 1px solid #00000029; ">
         <div class="flex border rounded overflow-hidden shadow-md m-4 p-4 w-full" *ngFor="let tema of lisdata">
-            <img [src]="tema.linkImage || 'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png' " alt="Imagen del tema" class="w-24 h-auto mr-4" />
+            <img [src]=" (verifyImage(tema.linkImage))?tema.linkImage: 'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png' " 
+            alt="Imagen del tema" class="w-24 h-auto mr-4" />
             <div class="flex-grow">
               <h2 class="text-lg font-semibold">{{ tema.name }}</h2>
               <p class="text-gray-600">{{ tema.description }}</p>
