--- a/src/app/feature/components/navbar/navbar.component.scss
+++ b/src/app/feature/components/navbar/navbar.component.scss
@@ -1,5 +1,6 @@
 /* src/app/navbar/navbar.component.scss */
 $font-family-poppins: 'Poppins', sans-serif;
+
 .nav_bar {
     font-family: $font-family-poppins;
     background-color: #FFFFFF;
@@ -7,26 +8,23 @@ $font-family-poppins: 'Poppins', sans-serif;
     display: flex;
     align-items: center;
     color: rgb(92, 64, 64);
-    justify-content: flex-start;
+    justify-content: space-between;
     position: relative;
-    box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.39);
-    -webkit-box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.39);
-    -moz-box-shadow: 0px 7px 23px -4px rgba(0, 0, 0, 0.39);
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 
 
     .login-button {
         display: block;
-        margin: auto;
         position: relative;
         cursor: pointer;
-    
+
         a {
-            display: block;
+            display: flex;
             padding: 10px;
             text-decoration: none;
             color: #333;
         }
-    
+
         .dropdown-content {
             display: none;
             position: absolute;
@@ -35,7 +33,7 @@ $font-family-poppins: 'Poppins', sans-serif;
             box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
             z-index: 1;
             top: 100%;
-    
+
             a {
                 padding: 12px 16px;
                 text-decoration: none;
@@ -43,7 +41,7 @@ $font-family-poppins: 'Poppins', sans-serif;
                 color: #333;
             }
         }
-    
+
         &:hover .dropdown-content {
             display: block;
         }
@@ -51,20 +49,21 @@ $font-family-poppins: 'Poppins', sans-serif;
 
     .logo {
         background-image: url('../../../../assets/AMBIEFAC_LOGO.png');
-        background-size: contain; 
+        background-size: contain;
         background-repeat: no-repeat;
         margin: 0 50px;
-        height: 90px; 
+        height: 90px;
         width: 150px;
         cursor: pointer;
     }
 
     .nav-list_ {
         list-style: none;
-        display: flex;  
+        display: flex;
         margin: 0;
         padding: 0;
-        .dropdown{
+
+        .dropdown {
             display: none;
         }
 
@@ -117,15 +116,22 @@ $font-family-poppins: 'Poppins', sans-serif;
     }
 
     @media only screen and (max-width: 768px) {
+        .logo {
+            margin: 0 20px;
+            height: 80px;
+            width: 80px;
+        }
         .nav-list_ {
             display: none;
             flex-direction: column;
             position: absolute;
-            top: 65px;
+            top: 80px;
             left: 0;
             width: 100%;
-            background-color: #e6e2e2;
-            .dropdown{
+            height: 100rem;
+            background-color: #ffffffdb;
+
+            .dropdown {
                 display: block;
             }
 
@@ -135,7 +141,32 @@ $font-family-poppins: 'Poppins', sans-serif;
 
             li {
                 text-align: center;
-                margin: 10px 0;
+                padding: 18px 0;
+                border-left: #33333349 1px solid;
+                ul{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    padding: 0;
+
+                }
+                li{
+                    border: none;
+                    margin: 20px 0 ;
+                }
+            }
+            li:hover{
+                background: #7dd660;
+                border-radius: 5px;
+            }
+        }
+        .dropdown-content{
+            li {
+                margin-top: 5px;
+                text-align: center;
+                padding: 18px 0;
+                border-left: #33333349 1px solid;
+                border-bottom: none;
             }
         }
 
@@ -149,7 +180,11 @@ $font-family-poppins: 'Poppins', sans-serif;
         }
 
         .search-bar {
+            width: 50%;
             margin: 10px 0;
+            .button-search{
+                width: 10%;
+            }
         }
     }
 }
