--- a/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
+++ b/src/app/feature/home/temas-inscripcion/temas-inscripcion.component.html
@@ -2,11 +2,11 @@
     <div class="header-topic-row">
         <div class="header-topic-colum tile-topic">
             <p>Ambiente</p>
-            <h1>Recicla y Recicla y Transforma</h1>
+            <h1>{{tema.name}}</h1>
             <p>Por AMBIEFAC Academy</p>
         </div>
         <div class="header-topic-colum image-topic">
-            <img src="../../../../assets/galeria-de-imagenes.png" alt="">
+            <img *ngIf="tema"  [src]="(verifyImage(tema.linkImage))?tema.linkImage: 'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png'" >
         </div>
     </div>
 </div>
@@ -14,24 +14,14 @@
 <div class="information-topic">
     <div class="information-topic-row">
         <div class="information-topic-colum descroption">
-            <div class="information-topic-row description-topic">
+            <div class="information-topic-row description-topic flex flex-col">
                 <h2>Descripción General:</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aspernatur quo ipsam ut nulla
-                    necessitatibus sit
-                    quasi ullam dolorem. Sit ipsa, beatae obcaecati velit voluptas dignissimos ut nesciunt vero
-                    voluptatibus.</p>
+                <p>{{tema.description}}</p>
             </div>
-            <div class="information-topic-row study-plan-topic">
+            <div class="information-topic-row study-plan-topic flex flex-col">
                 <h2>¿Que aprenderás?</h2>
-                <ul>
-                    <li>Técnicas de Reciclaje Efectivas: Descubrirás cómo clasificar, recolectar y reciclar diversos
-                        tipos de materiales de manera adecuada y eficiente.</li>
-                    <li>Participación en Proyectos Comunitarios: Te involucrarás en proyectos prácticos que marcan la
-                        diferencia en tu comunidad, desde limpiezas locales hasta iniciativas de reforestación.</li>
-                    <li>Habilidades para Reducir tu Huella Ecológica: Adquirirás habilidades prácticas para reducir el
-                        desperdicio y adoptar un estilo de vida más sostenible.</li>
-                    <li>onciencia Ambiental: Desarrollarás una profunda comprensión de los desafíos ambientales actuales
-                        y aprenderás cómo tu participación puede hacer una diferencia real.</li>
+                <ul >
+                    <li *ngFor="let subtema of tema.subtopic">{{subtema.subtopic_name}}</li>
                 </ul>
             </div>
             <div class="information-topic-row join-up-topic">
@@ -46,14 +36,14 @@
             <div class="duration-topic-row">
                 <div class="length">
                     <img src="../../../../assets/hora.png" alt="">
-                    <p>6hr</p>
+                    <p>{{tema.time}}</p>
                 </div>
             </div>
             <div class="duration-topic-row">
                 <div class="level">
                     <div class="length">
                         <img src="../../../../assets/siguiente-nivel (1).png" alt="">
-                        <p>Intermedio</p>
+                        <p>{{nivelCurso}}</p>
                     </div>
                 </div>
             </div>
