--- a/src/app/feature/admin/manag-exams/components/agregar-preguntas/agregar-preguntas.component.html
+++ b/src/app/feature/admin/manag-exams/components/agregar-preguntas/agregar-preguntas.component.html
@@ -35,7 +35,7 @@
                   <label class="block text-gray-700 text-sm font-bold mb-2">Respuesta {{ j + 1 }}:</label>
                   <div class="flex items-center mb-2">
                     <input type="checkbox" class="form-checkbox checkbox-redondo  h-5 w-5 text-indigo-600 mr-2"
-                      formControlName="isCorrect">
+                      formControlName="correct">
                     <input type="text" class="w-full px-3 py-2 border rounded-5 mr-2" formControlName="answerText" required>
                     <i class="fa-regular fa-trash-can cursor-pointer" (click)="eliminarRespuesta(i, j)"></i>
                   </div>
