--- a/src/app/feature/components/navbar/navbar.component.html
+++ b/src/app/feature/components/navbar/navbar.component.html
@@ -20,10 +20,10 @@
     <div class="button-search"></div>
   </div>
   <div class="login-button w-[15%]">
-    <a *ngIf="!response">
+    <a *ngIf="!response.success">
       <div (click)="redirecToLogin()" class="mx-2">Iniciar sesion</div>/<div class="mx-2" (click)="redirecToRegister()">Registrarme</div>
     </a>
-    <div class="flex flex-col justify-center items-center" (click)="redirecToClient()">
+    <div *ngIf="response.success" class="flex flex-col justify-center items-center" (click)="redirecToClient()">
       <i class="fa-solid fa-user text-[25px] "></i>
       <p class="m-0">{{response.data.fullName}}</p>
     </div>
