--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -1,5 +1,4 @@
+
 <app-layout-learning>
-  <app-sidenav-learning>
-    <app-course-content></app-course-content>
-  </app-sidenav-learning>
+    <router-outlet></router-outlet>
 </app-layout-learning>
