--- a/src/app/feature/components/layout-learning/layout-learning.component.html
+++ b/src/app/feature/components/layout-learning/layout-learning.component.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Learning</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
+    <title>Tu Página</title>
 </head>
-<body class="bg-slate-100 h-screen">
-  <nav class="w-full h-[70px] flex shadow-md p-0 mt-0">
-    <app-navbar-learning class="w-full h-full"></app-navbar-learning>
-  </nav>
-  <section class="w-full">
-    <ng-content></ng-content>
-  </section>
+<body class="font-sans bg-gray-100 flex flex-col h-screen">
+
+    <!-- Navbar -->
+    <nav class="text-white">
+          <app-navbar-learning> </app-navbar-learning>
+    </nav>
+
+    <!-- Contenedor principal -->
+    <div class="flex flex-1">
+
+        <!-- Sidebar -->
+        <aside class="w-1/4 bg-white " *ngIf="showSidebar">
+          <app-sidebar-learning [lastSelectionIndex]="lastSelectionIndex" (selectionChanged)="handleSelectionChange($event)"></app-sidebar-learning>
+        </aside>
+
+        <main class="flex-1 py-4 overflow-hidden bg-white">
+          <div class="flex-1 h-full m-2 p-4 shadow-lg rounded-[10px]">
+              <div class="border-b-2 flex flex-row">
+                  <div class="relative p-2">
+                      <button (click)="toggleSidebar()" class="text-black focus:outline-none">
+                          <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                          </svg>
+                      </button>
+                  </div>
+              </div>
+              <router-outlet></router-outlet>
+          </div>
+      </main>
+
+    </div>
+
 </body>
 </html>
+
+
+
+
