Change page home

--- a/src/app/feature/components/layout/layout.component.html
+++ b/src/app/feature/components/layout/layout.component.html
@@ -1,9 +1,14 @@
+<head>
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+</head>
 <body>
     <header>
         <app-navbar></app-navbar>
     </header>
     <main>
-        <!-- Contenido-->
         <router-outlet></router-outlet>
     </main>
     <footer>
