--- a/src/app/feature/home/inicio/inicio.component.html
+++ b/src/app/feature/home/inicio/inicio.component.html
@@ -1,39 +1,44 @@
-<section class="home-content-header">
-    <div class="header-colum">
-        <div class="header-colum-children">
+<section class="w-full flex mt-5 p-0 
+animate__animated animate__fadeInUp animate__fast">
+    <div class="w-[50%] flex flex-col gap-4 justify-center items-center">
+        <div class="flex flex-col items-center gap-1">
             <h1>AMBIEFAC</h1>
             <h2>Descubre, Aprende y Transforma Tu Mundo</h2>
             <p>Descubres, aprendes y transformas tu mundo hacia un futuro más sostenible.</p>
         </div>
-        <div class="header-colum-children">
-            <button class="button-header">¡Incribete ahora!</button>
+        <div class="">
+            <button class="w-[16rem] text-[1.3rem] h-[2.7rem] rounded-full border bg-[#33cc57] text-white
+            font-bold shadow-lg
+            ">¡Incribete ahora!</button>
         </div>
     </div>
-    <div class="header-colum">
+    <div class="w-[50%] h-[70%] flex justify-center items-center">
         <img src="../.../../../../../assets/galeria-de-imagenes.png" alt="">
     </div>
 </section>
-<section>
-    <div class="info-content">
-        <div class="info-colum seccion-1">
-            <div class="info-row titulo info-1">
+<section class="w-full flex  mt-0 p-0 ">
+    <div class="  w-full  flex">
+        <div class="w-[50%] flex flex-col justify-around items-center ">
+            <div class="w-full flex justify-center items-center">
                 <h2>Titulo seccion II</h2>
             </div>
-            <div class="info-row imagen">
-                <img src="../.../../../../../assets/galeria-de-imagenes.png" alt="">
+            <div class="w-[80%] h-[70%]  overflow-hidden">
+                <img class="" src="../.../../../../../assets/galeria-de-imagenes.png" alt="">
             </div>
         </div>
-        <div class="info-colum seccion-2">
-            <div class="info-row titulo info-2">
-                <h2>Titulo sesccion</h2>
+        <div class="w-[50%] flex flex-col justify-center items-center gap-5
+        bg-[#33CC57] text-white shadow-md">
+            <div class="">
+                <h2 class="font-bold">Titulo sesccion</h2>
             </div>
-            <div class="info-row parrafo">
+            <div class="w-[90%] text-justify">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus minus autem qui labore! Non sint
                     dolor ad, repudiandae deserunt eveniet quaerat at accusamus quidem ea vero inventore dignissimos
                     sunt magnam?</p>
             </div>
-            <div class="info-row ">
-                <button class="button-info">Button seccion</button>
+            <div class=" ">
+                <button class="w-[16rem] text-black text-[1.3rem] h-[2.7rem] rounded-full border bg-white
+                font-bold shadow-md">Button seccion</button>
             </div>
         </div>
     </div>
@@ -49,52 +54,64 @@
         </div>
     </div>
 </section>
-<section>
-    <div class="explore-cursos-content">
+<section class="w-full ">
+    <div class="w-full flex flex-col gap-4 items-center justify-center">
         <div class="cursos-row">
-            <h2>Explore nuestros cursos</h2>
+            <h2>Explore nuestros cursos </h2>
         </div>
-        <div class="cursos-row cards">
-            <div class="cursos-colum card-body">
-                <div class="card-imagen"><img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
-                <div class="titulo-card">
-                    <h3>titulo card</h3>
+        <div class="w-[90%] flex justify-around ">
+            <div class="w-[31%] border shadow-md flex flex-col
+             justify-around items-center gap-2">
+                <div class="card-imagen">
+                  <img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
+                <div class="">
+                    <h2 class="font-bold">titulo card</h2>
                 </div>
-                <div class="parrafo-card">
+                <div class="flex items-center w-[90%] text-justify">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis molestiae vel non officiis.
                         Aliquid, atque fuga? Quidem, nam ipsam. Optio corrupti quibusdam delectus quisquam inventore
                         exercitationem voluptatum consequuntur est?</p>
                 </div>
                 <div class="button-card">
-                    <button>¡Incribete ahora!</button>
+                  <button class="w-[14rem] text-[1.3rem] h-[2.5rem] rounded-full border bg-[#33cc57] text-white
+                  font-bold shadow-md mb-3
+                  ">¡Incribete ahora!</button>
                 </div>
             </div>
-            <div class="cursos-colum card-body">
-                <div class="card-imagen"><img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
-                <div class="titulo-card">
-                    <h3>titulo card</h3>
+            <div class="w-[31%] border shadow-md flex flex-col
+             justify-around items-center gap-2">
+                <div class="card-imagen">
+                  <img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
+                <div class="">
+                    <h2 class="font-bold">titulo card</h2>
                 </div>
-                <div class="parrafo-card">
+                <div class="flex items-center w-[90%] text-justify">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis molestiae vel non officiis.
                         Aliquid, atque fuga? Quidem, nam ipsam. Optio corrupti quibusdam delectus quisquam inventore
                         exercitationem voluptatum consequuntur est?</p>
                 </div>
                 <div class="button-card">
-                    <button>¡Incribete ahora!</button>
+                  <button class="w-[14rem] text-[1.3rem] h-[2.5rem] rounded-full border bg-[#33cc57] text-white
+                  font-bold shadow-md mb-3
+                  ">¡Incribete ahora!</button>
                 </div>
             </div>
-            <div class="cursos-colum card-body">
-                <div class="card-imagen"><img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
-                <div class="titulo-card">
-                    <h3>titulo card</h3>
+            <div class="w-[31%] border shadow-md flex flex-col
+             justify-around items-center gap-2">
+                <div class="card-imagen">
+                  <img src="../../../../assets/galeria-de-imagenes.png" alt=""></div>
+                <div class="">
+                    <h2 class="font-bold">titulo card</h2>
                 </div>
-                <div class="parrafo-card">
+                <div class="flex items-center w-[90%] text-justify">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam quis molestiae vel non officiis.
                         Aliquid, atque fuga? Quidem, nam ipsam. Optio corrupti quibusdam delectus quisquam inventore
                         exercitationem voluptatum consequuntur est?</p>
                 </div>
                 <div class="button-card">
-                    <button>¡Incribete ahora!</button>
+                  <button class="w-[14rem] text-[1.3rem] h-[2.5rem] rounded-full border bg-[#33cc57] text-white
+                  font-bold shadow-md mb-3
+                  ">¡Incribete ahora!</button>
                 </div>
             </div>
         </div>
