--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -1,4 +1,34 @@
-
-<app-layout-learning>
-    <router-outlet></router-outlet>
-</app-layout-learning>
+<div class="scrollable-main">
+  <div *ngFor="let item of data; let i = index" class="flex flex-col my-6 ">
+    <ng-container [ngSwitch]="item.type">
+      <ng-container *ngSwitchCase="'text'">
+        <section [id]="i">
+          <h2>{{ item.title }}</h2>
+          <p>{{ item.content }}</p>
+        </section>
+      </ng-container>
+      <ng-container *ngSwitchCase="'image'">
+        <section [id]="i">
+          <h2>{{ item.title }}</h2>
+          <div class="w-full flex items-center justify-center my-4">
+            <img [src]="item.content" alt="{{ item.title }}" />
+          </div>
+        </section>
+      </ng-container>
+      <ng-container *ngSwitchCase="'video'">
+        <section [id]="i">
+          <h2>{{ item.title }}</h2>
+          <div class="w-full flex items-center justify-center my-4">
+            <iframe width="560" height="315" [src]="viewVideo(item.content)" title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+        </section>
+      </ng-container>
+      <ng-container *ngSwitchDefault>
+        <p>Tipo de contenido no reconocido</p>
+      </ng-container>
+    </ng-container>
+  </div>
+</div>
