--- a/src/app/feature/academy/learning/components/course/course.component.scss
+++ b/src/app/feature/academy/learning/components/course/course.component.scss
@@ -1,4 +1,24 @@
 .rotated {
     transform: rotate(90deg);
-    transition: transform 0.3s ease; /* Añade una transición suave */
+    transition: transform 0.3s ease; 
   }
+  .scrollable-main::-webkit-scrollbar {
+    width: 8px; 
+}
+
+.scrollable-main::-webkit-scrollbar-thumb {
+    background-color: #8888888c; 
+    border-radius: 6px;
+}
+
+.scrollable-main::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.scrollable-main::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+  .scrollable-main {
+    overflow-y: auto;
+    max-height: 70vh; 
+}
