--- a/src/app/feature/admin/contenido-curso/components/informacion-tema/informacion-tema.component.html
+++ b/src/app/feature/admin/contenido-curso/components/informacion-tema/informacion-tema.component.html
@@ -1,4 +1,4 @@
-<app-card-body [Titulo]='titulo' [linkBack]="return" [ButtonRigth]="saveElemts"
+<app-card-body [Titulo]='titulo' [ButtonRigth]="saveElemts"
   [tooltip]="'Nuevo contenido'" [tooltipBack]="'Volver'" >
   <section cdkDropListGroup class="layout">
     <div class="sidebar">
