--- a/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
+++ b/src/app/feature/admin/contenido-curso/components/subtemas-curso/subtemas-curso.component.html
@@ -11,7 +11,7 @@
     <div class="flex flex-row justify-start items-center mb-2">
       <img [src]="subtema.imageUrl ||'https://icones.pro/wp-content/uploads/2021/08/icone-photo-grise.png' " alt="Foto del subtema" class="w-16 h-16 rounded-md mx-4">
       <h3 class="text-lg text-black font-semibold w-full cursor-pointer m-0 h-[40px]">{{ subtema.name }}</h3>
-      <div class="flex items-center justify-end ml-auto cursor-pointer" (click)="redirecToUpdateTema(subtema.id)">
+      <div class="flex items-center justify-end ml-auto cursor-pointer" (click)="redirecToUpdateTema(subtema.id, subtema.name)">
         <svg xmlns="http://www.w3.org/2000/svg" height="16" width="10" class="mx-5" 
         viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
         <path
