--- a/src/app/feature/components/navbar-client/navbar-client.component.html
+++ b/src/app/feature/components/navbar-client/navbar-client.component.html
@@ -1,6 +1,6 @@
 <section class="w-full flex justify-around items-center border shadow-md bg-[#fff] text-white">
   <div class="w-[10%] h-[50px] flex justify-center items-center  my-2">
-    <img src="assets/AMBIEFAC_LOGO.png" alt="logo" width="70">
+   <button (click)="navigateTo()"> <img src="assets/AMBIEFAC_LOGO.png" alt="logo" width="70"></button>
   </div>
   <div class="border-r-2  text-black w-[12%]">
     <button class="border-2 rounded-1 w-[70%] h-[40px] flex flex-row items-center justify-around">
