--- a/src/app/feature/components/navbar-learning/navbar-learning.component.html
+++ b/src/app/feature/components/navbar-learning/navbar-learning.component.html
@@ -6,6 +6,6 @@
     <h1 class="indent-5 border-l-2 font-bold">{{title}}</h1>
   </div>
   <div class="w-[5%] flex  justify-center items-center">
-    <Button ><img src="assets/cerrar.png" alt="" width="22"></Button>
+    <Button (click)="navigateTo()" ><img src="assets/cerrar.png" alt="" width="22"></Button>
   </div>
 </article>
