--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -1,34 +1,53 @@
-<div class="scrollable-main">
-  <div *ngFor="let item of data; let i = index" class="flex flex-col my-6 ">
-    <ng-container [ngSwitch]="item.type">
-      <ng-container *ngSwitchCase="'text'">
-        <section [id]="i">
-          <h2>{{ item.title }}</h2>
-          <p>{{ item.content }}</p>
-        </section>
+<div class="w-full h-[100%]  flex justify-center items-center flex-col" *ngIf="loading">
+  <img src="../../../../../../assets/AMBIEFAC_LOGO.png" alt="" height="100" class="!h-[177px]">
+  <div class="spinner-container ">
+    <div class="spinner"></div>
+  </div>
+</div>
+<div class="scrollable-main" *ngIf="!loading">
+  <div class="mx-[10%]" *ngIf="rutaId !== 0 && !loading">
+    <div *ngFor="let item of data; let i = index" class="flex flex-col my-[10%] border-b-2 py-[10%] ">
+      <ng-container [ngSwitch]="item.type">
+        <ng-container *ngSwitchCase="'text'">
+          <section [id]="i">
+            <h2>{{ item.title }}</h2>
+            <p>{{ item.content }}</p>
+          </section>
+        </ng-container>
+        <ng-container *ngSwitchCase="'image'">
+          <section [id]="i">
+            <h2>{{ item.title }}</h2>
+            <div class="w-full flex items-center justify-center my-4">
+              <img [src]="item.content" alt="{{ item.title }}" />
+            </div>
+          </section>
+        </ng-container>
+        <ng-container *ngSwitchCase="'video'">
+          <section [id]="i">
+            <h2>{{ item.title }}</h2>
+            <div class="w-full flex items-center justify-center my-4">
+              <iframe width="560" height="315" [src]="viewVideo(item.content)" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+          </section>
+        </ng-container>
+        <ng-container *ngSwitchDefault>
+          <p>Tipo de contenido no reconocido</p>
+        </ng-container>
       </ng-container>
-      <ng-container *ngSwitchCase="'image'">
-        <section [id]="i">
-          <h2>{{ item.title }}</h2>
-          <div class="w-full flex items-center justify-center my-4">
-            <img [src]="item.content" alt="{{ item.title }}" />
-          </div>
-        </section>
-      </ng-container>
-      <ng-container *ngSwitchCase="'video'">
-        <section [id]="i">
-          <h2>{{ item.title }}</h2>
-          <div class="w-full flex items-center justify-center my-4">
-            <iframe width="560" height="315" [src]="viewVideo(item.content)" title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              allowfullscreen></iframe>
-          </div>
-        </section>
-      </ng-container>
-      <ng-container *ngSwitchDefault>
-        <p>Tipo de contenido no reconocido</p>
-      </ng-container>
-    </ng-container>
+    </div>
+  </div>
+  <div *ngIf="rutaId === 0">
+    <div class="parallax-container" [style.backgroundImage]="'url(' + topic.linkImage+ ')'">
+      <div class="content">
+        <h1>{{topic.name}}</h1>
+      </div>
+    </div>
+    <div class="my-[10%] px-[10%] py-[10%] border-b-2 border-t-2 bg-[#fbfbfb]">
+      <h2>Descripcion</h2>
+      <p>{{topic.description}}</p>
+    </div>
   </div>
 </div>
