--- a/src/app/feature/academy/learning/components/course/course.component.scss
+++ b/src/app/feature/academy/learning/components/course/course.component.scss
@@ -27,3 +27,65 @@ img{
     max-width: 70%;
     height: 450px;
 }
+
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    overflow-x: hidden;
+  }
+
+  .parallax-container {
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+    // background-image: url('https://ichef.bbci.co.uk/news/800/cpsprodpb/DA49/production/_114418855_gettyimages-1159320401.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; /* Esto crea el efecto de parallax */
+  }
+
+  .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+  }
+  h1 {
+    font-size: 2.5em; 
+    font-weight: 500; 
+  }
+
+
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f4f4f4;
+  }
+
+  .spinner-container {
+    position: relative;
+    width: 50px;
+    height: 50px;
+  }
+
+  .spinner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border: 4px solid #3498db;
+    border-top: 4px solid transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
