--- a/src/app/feature/academy/learning/components/page-learning/page-learning.component.html
+++ b/src/app/feature/academy/learning/components/page-learning/page-learning.component.html
@@ -1,3 +1,3 @@
-<app-layout-learning [topicId]="rutaId" [data]="data">
+<app-layout-learning [topicId]="rutaId" [data]="data" (selectionChange)="handleSelection($event)">
     <router-outlet></router-outlet>
 </app-layout-learning>
